# VossII

./: .gitignore  Dockerfile  HOW_TO_GET_YOSYS  NOTICE  README.md  TODO
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
ckt_examples/M65C02/: M65C02.fl  M65C02_AddrGen.v  M65C02_Core.v  README
ckt_examples/diff_cache/: README  ex0.fl  ex1_a.fl  ex1_b.fl  ex2.fl  ex3.fl  ex4.fl  ex5.fl
ckt_examples/m32632/: LICENSE.LGPLv21
ckt_examples/simple_examples/: .gitignore  bundles.fl  ex1.fl  example.fl  ffs.fl  label_example.fl  medium.fl  small.fl  tiny.fl  validready.fl
demos/: intro.fl  miter.fl  mod_mult.fl
doc/fl_tutorial/: fl_tutorial.css  fl_tutorial.html  index.html
doc/hfl_examples/: 01_simple.fl  02_example.fl  03_example.fl  04_example.fl  05_example.fl  06_example.fl  07_example.fl  08_example.fl
examples/: M32632.fl  cache.fl  fl.fl  isomatch.fl  mux.fl  small.fl  test.fl  verilog.fl
examples/cache/: puzzle.txt
examples/fl/: cache.fl
examples/lib/: primes.fl  signatures.fl  ullman.fl  utils.fl  vec_info.fl
examples/mux/: piece.txt  puzzle.txt  small_lib.v
examples/verilog/: small.fl  small.v  small_lib.v
isomatch/: isomatch.fl  isomatch.old
isomatch/lib/: primes.fl  signatures.fl  (+2 more)
isomatches/: matches
pexlif_examples/: folding.fl  isomatch.fl  isomatch_build.fl  matches
src/: IDVII  Makefile  license_template
src/fl-hs-plugins/: Makefile  fl-plugins.cabal
src/fl-hs-plugins/create-fl-plugin/: Main.hs
src/fl-hs-plugins/src/: hsbracket.c
src/fl-hs-plugins/src/Language/FL/: Plugin.hs
src/fl-hs-plugins/src/Language/FL/Plugin/: API.hs  Exports.hs  FlExport.hs  FlPtr.hs  FlType.hs  Foreign.hsc  Internal.hs  TypeDict.hs
src/fl-hs-plugins/src/Language/FL/Plugin/API/: Type.hs
src/fl-hs-plugins/src/Language/FL/Plugin/Exports/: Types.hs
src/fl-hs-plugins/src/Language/FL/Plugin/FlExport/: Instances.hs
src/fl-hs-plugins/src/Language/FL/Plugin/FlType/: FunctionInstances.hs  Instances.hs  TupleInstances.hs
src/fl-hs-plugins/src/Language/FL/Plugin/Foreign/: TypeHooks.hs  Types.hs
src/fl-hs-plugins/templates/: Makefile.mustache  cabal.mustache  hsbracket.mustache  main.mustache
(+557 files in other folders)
