cabal-version:       2.0

name:                fl-plugins
version:             0.1.0.0
synopsis:            Library and support programs for writing plugins for the Fl language
-- license:             ???
-- license-file:        LICENSE
author:              Anton Ekblad
maintainer:          anton@ekblad.cc
category:            Development
build-type:          Simple

extra-source-files: templates/*.mustache

library
  exposed-modules:
    Language.FL.Plugin
    Language.FL.Plugin.Internal
  other-modules:
    Language.FL.Plugin.API
    Language.FL.Plugin.API.Type
    Language.FL.Plugin.Exports
    Language.FL.Plugin.Exports.Types
    Language.FL.Plugin.Foreign
    Language.FL.Plugin.Foreign.Types
    Language.FL.Plugin.FlExport
    Language.FL.Plugin.FlExport.Instances
    Language.FL.Plugin.FlPtr
    Language.FL.Plugin.FlType
    Language.FL.Plugin.FlType.FunctionInstances
    Language.FL.Plugin.FlType.Instances
    Language.FL.Plugin.FlType.TupleInstances
    Language.FL.Plugin.Foreign.TypeHooks
    Language.FL.Plugin.TypeDict
  build-depends:
    base        >=4.8 && <5,
    bytestring ^>=0.10,
    containers ^>=0.6,
    text       ^>=1.2
  other-extensions:
    TypeApplications
    ForeignFunctionInterface
    GeneralizedNewtypeDeriving
    FlexibleInstances
    UndecidableInstances
    DefaultSignatures
    ScopedTypeVariables
    TupleSections
    OverloadedStrings
  hs-source-dirs: src
  include-dirs:
    ../include
    ../bin/fl
  build-tool-depends: hsc2hs:hsc2hs
  default-language: Haskell2010
  ghc-options: -fPIC -Wall -Wno-orphans

executable create-fl-plugin
  main-is: Main.hs
  other-modules:
    Paths_fl_plugins
  autogen-modules:
    Paths_fl_plugins
  build-depends:
    base            >=4.8 && <5,
    directory      ^>=1.3,
    file-embed     ^>=0.0,
    filepath       ^>=1.4,
    mustache       ^>=2.3,
    raw-strings-qq ^>=1.1,
    text           ^>=1.2 && <1.2.4.0
  other-extensions:
    CPP
    OverloadedStrings
  hs-source-dirs:   create-fl-plugin
  default-language: Haskell2010
